{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 41,
  "lineage": "f1a91d46-1be7-7307-0d61-8c31a33c4bd0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fit_cli_allow_iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-08-07T04:59:31.827-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/couchbase-qe/global/firewalls/fit-cli-allow-iap-ssh",
            "log_config": [],
            "name": "fit-cli-allow-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/networks/fit-cli-vpc",
            "params": [],
            "priority": 1000,
            "project": "couchbase-qe",
            "self_link": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/firewalls/fit-cli-allow-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.fit_cli",
            "google_project_service.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fit_cli_allow_private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-08-14T02:13:34.293-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/couchbase-qe/global/firewalls/fit-cli-allow-private-endpoint",
            "log_config": [],
            "name": "fit-cli-allow-private-endpoint",
            "network": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/networks/fit-cli-vpc",
            "params": [],
            "priority": 1000,
            "project": "couchbase-qe",
            "self_link": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/firewalls/fit-cli-allow-private-endpoint",
            "source_ranges": [
              "10.60.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "fit-cli-private-endpoint"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.fit_cli",
            "google_compute_subnetwork.fit_cli_us_west1",
            "google_project_service.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "fit_cli",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/couchbase-qe/global/networks/fit-cli-vpc",
            "mtu": 0,
            "name": "fit-cli-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "5041688934432142946",
            "numeric_id": "5041688934432142946",
            "project": "couchbase-qe",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/networks/fit-cli-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "fit_cli_us_west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-07T04:59:32.649-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/couchbase-qe/regions/us-west1/routers/fit-cli-us-west1-router",
            "name": "fit-cli-us-west1-router",
            "network": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/networks/fit-cli-vpc",
            "project": "couchbase-qe",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/regions/us-west1/routers/fit-cli-us-west1-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.fit_cli",
            "google_project_service.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "fit_cli_us_west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "couchbase-qe/us-west1/fit-cli-us-west1-router/fit-cli-us-west1-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "fit-cli-us-west1-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "couchbase-qe",
            "region": "us-west1",
            "router": "fit-cli-us-west1-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.fit_cli",
            "google_compute_router.fit_cli_us_west1",
            "google_project_service.fit_cli"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "fit_cli_us_west1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-08-07T04:59:32.031-07:00",
            "enable_flow_logs": false,
            "gateway_address": "10.60.1.1",
            "id": "projects/couchbase-qe/regions/us-west1/subnetworks/fit-cli-us-west1",
            "ip_cidr_range": "10.60.1.0/24",
            "name": "fit-cli-us-west1",
            "network": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/global/networks/fit-cli-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "couchbase-qe",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/couchbase-qe/regions/us-west1/subnetworks/fit-cli-us-west1",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 942617983020725835
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.fit_cli",
            "google_project_service.fit_cli"
          ]
        }
      ]
    }
  ]
}